# sample-eksreview

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  docs-requirements.txt  eksreview  install.sh  main.py  mkdocs.yml  pyproject.toml  requirements-lock.txt  temp.md
.github/workflows/: docs.yml  security.yml
docs/: architecture.md  faq.md  index.md
docs/adr/: 0000-template.md  001-sliding-window-conversation-manager.md  002-stdio-mcp-not-http.md  003-two-tier-orchestration.md  004-mcp-subprocess-env-allowlist.md  005-layered-safety-stack.md  006-skill-driven-report-compilation.md  007-no-shell-as-opt-in.md  008-bm25-over-embeddings.md  009-pluto-live-fetch-with-validation.md  010-process-global-rate-limit.md  011-remove-confirm-action-tool.md  README.md
docs/assets/: extra.css
docs/configuration/: cli-flags.md  credentials.md  environment-variables.md  models.md
docs/examples/: sample-assessment-report.md
docs/getting-started/: first-review.md  installation.md  prerequisites.md
docs/reference/: cost.md  data-and-cleanup.md  performance.md  permissions.md  safety.md  troubleshooting.md  what-gets-checked.md
docs/usage/: conversational-reviews.md  example-prompts.md  knowledge-base.md  reports.md  slash-commands.md
eks_review_agent/: __init__.py  agent.py  config.py  session.py  tools.py
eks_review_agent/cli/: __init__.py  _turn.py  banner.py  context_cmd.py  export_cmd.py  fix_cmd.py  investigate_cmd.py  knowledge_cmd.py  model_cmd.py  readline_setup.py  repl.py  tools_cmd.py  upgrade_cmd.py
eks_review_agent/core/: __init__.py  callbacks.py  model.py  observability.py  plugins.py  prompts.py  rate_limiter.py  spinner.py
eks_review_agent/knowledge/: __init__.py  builtin_knowledge.py  knowledge_base.py  knowledge_tool.py  skill_manager.py
eks_review_agent/orchestration/: __init__.py  mcp.py  mcp_checks.py  review_orchestrator.py  subagent_pipeline.py  upgrade_orchestrator.py
eks_review_agent/reports/: __init__.py  export.py  report_search.py
eks_review_agent/ui/: __init__.py  logging_config.py  picker.py
examples/: sample-upgrade-readiness-report.md
mcp-server/: LICENSE  NOTICE  README.md  pyproject.toml  test_live.py
mcp-server/awslabs/: __init__.py
mcp-server/awslabs/eks_review_mcp_server/: __init__.py  aws_helper.py  check_utils.py  eks_cluster_autoscaler_handler.py  eks_karpenter_handler.py  eks_networking_handler.py  eks_observability_handler.py  eks_resiliency_handler.py  eks_security_handler.py  eks_upgrade_handler.py  k8s_apis.py  k8s_client_cache.py  logging_helper.py  models.py  server.py
mcp-server/awslabs/eks_review_mcp_server/data/: eks_cluster_autoscaler_checks.json  eks_karpenter_checks.json  eks_networking_checks.json  eks_observability_checks.json  eks_resiliency_checks.json  eks_security_checks.json  eks_upgrade_checks.json  k8s_deprecated_versions.yaml
mcp-server/tests/: __init__.py  conftest.py  test_eks_cluster_autoscaler_handler.py  test_eks_karpenter_handler.py  test_eks_networking_handler.py  test_eks_observability_handler.py  test_eks_resiliency_handler.py  test_eks_security_handler.py  test_eks_upgrade_handler.py  test_init.py  test_main.py  test_server.py
skills/eks-investigation/: SKILL.md
skills/eks-knowledge/: SKILL.md
skills/eks-report-compiler/: SKILL.md
skills/eks-upgrade-readiness/: SKILL.md
tests/: conftest.py  test_cli.py  test_export.py  test_golden_reports.py  test_knowledge_base.py  test_knowledge_tool.py  test_mcp.py  test_mcp_checks.py  test_model.py  test_observability.py  test_prompts.py  test_rate_limiter.py  test_report_search.py  test_review_orchestrator.py  test_session.py  test_skill_manager.py  test_spinner.py  test_subagent_pipeline.py  test_tools.py
tests/fixtures/: sample_assessment_report.md  sample_upgrade_report.md
