[project]
name = "eksreview"
version = "0.1.0"
description = "Conversational AI agent for EKS operations review using Strands SDK"
requires-python = ">=3.10"
license = "MIT-0"
# Dependencies are pinned with both lower bounds (features used) and upper
# bounds (next major) to limit supply-chain risk from breaking releases.
# For reproducible installs, a lock file is generated via
# `pip freeze > requirements-lock.txt`.
dependencies = [
    "strands-agents>=1.32.0,<2.0.0",
    "strands-agents-tools>=0.2.23,<1.0.0",
    "boto3>=1.42.0,<2.0.0",
    "mcp>=1.26.0,<2.0.0",
    "pdfminer.six>=20221105",
    "requests>=2.33.0,<3.0.0",
    # Transitive via strands-agents-tools, floored here for security:
    # <3.14.0 has multiple CVEs (CookieJar.load() deserialization,
    # cross-origin cookie leak, multipart header DoS, etc.).
    # <=3.14.0 has WebSocket incomplete-frame memory DoS.
    # We don't use aiohttp directly.
    "aiohttp>=3.14.1,<4.0.0",
    # Transitive via botocore/requests, floored for security:
    # 2.6.0–2.6.x can over-decompress streamed responses (CWE-409).
    # We don't use urllib3 directly.
    "urllib3>=2.7.0,<3.0.0",
    # Transitive via strands-agents-tools, floored for security:
    # <12.2.0 has multiple CVEs (FITS decompression bomb, font integer
    # overflow, nested-coords heap overflow, PDF trailer infinite loop).
    # We don't use pillow directly.
    "pillow>=12.2.0,<13.0.0",
    # Transitive via mcp/uvicorn, floored for security:
    # <0.0.27 has multipart parsing DoS (part headers + preamble/epilogue).
    # <0.0.30 has QuerystringParser O(n^2) DoS when ';' is the separator.
    # <0.0.31 has negative Content-Length read-until-EOF memory DoS.
    "python-multipart>=0.0.31",
    # Transitive via pdfminer.six (image extra) etc., floored for security:
    # <6.1.0 defaults to resolve_entities=True, allowing XXE local file reads.
    "lxml>=6.1.0,<7.0.0",
    # Transitive via pdfminer.six, floored for security:
    # 45.0.0–46.0.6 can buffer-overflow on non-contiguous buffers.
    # <48.0.1 includes OpenSSL vulnerable to CVE in statically linked wheels.
    "cryptography>=48.0.1",
    # Transitive via requests, floored for security:
    # <3.15 is vulnerable to idna.encode() DoS (incomplete CVE-2024-3651 fix).
    "idna>=3.15",
    # Transitive via mcp, floored for security:
    # <=1.0.0 mis-validates the Host header, poisoning request.url.path
    # and allowing path-based auth bypass.
    # <1.1.0 resolves UNC paths in StaticFiles on Windows (SSRF/NTLM leak).
    # <1.3.1 silently ignores max_fields/max_part_size for urlencoded forms (DoS).
    "starlette>=1.3.1,<2.0.0",
    # Transitive via rich, floored for security:
    # <2.20.0 has a ReDoS in the AdlLexer GUID regex.
    "Pygments>=2.20.0,<3.0.0",
    # Transitive via mcp, floored for security:
    # <2.13.0 has algorithm confusion (JWK used as HMAC secret) and
    # detached-payload DoS (unbounded Base64URL decode before discard).
    "PyJWT>=2.13.0",
    # Transitive via mcp, floored for security:
    # <2.14.2 has NestedSecretsSettingsSource symlink traversal and
    # secrets_dir_max_size bypass.
    "pydantic-settings>=2.14.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.1,<6.0",
    "ruff>=0.8.0,<1.0.0",
    "pip-audit>=2.7,<3.0",
]
# Documentation site (MkDocs Material). Also mirrored in docs-requirements.txt,
# which the docs GitHub Actions workflow installs without building the package.
docs = [
    "mkdocs-material>=9.5,<10.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Explicit package discovery — prevents setuptools from accidentally
# treating skills/, reports/, mcp-server/, etc. as Python packages.
[tool.setuptools.packages.find]
include = ["eks_review_agent*"]
exclude = ["skills*", "reports*", "mcp-server*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-q",
]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: tests that exercise multi-module flows",
]

[tool.coverage.run]
source = ["eks_review_agent"]
branch = true
# Skip files we don't need to gate on:
#   - main.py: REPL/CLI integration; covered by manual + integration tests.
#   - ui/picker.py: terminal-driven UI, hard to unit-test meaningfully.
#   - core/callbacks.py: print-side-effect heavy, smoke-tested separately.
omit = [
    "eks_review_agent/ui/picker.py",
    "eks_review_agent/core/callbacks.py",
    "eks_review_agent/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    # Defensive branches we don't test
    "except ImportError",
]
show_missing = true
skip_covered = false
precision = 1
